--- a/an-identity-ovpn/an-identity-ovpn-ui/src/main/js/templates/my_vpns.html
+++ b/an-identity-ovpn/an-identity-ovpn-ui/src/main/js/templates/my_vpns.html
@@ -1,18 +1,12 @@
-<div class="col-md-12" ng-controller="MyAppsController">
+<div class="col-md-12" ng-controller="MyOvpnsController">
 	<h4>VPNs</h4>
 	<div class="form-group">
 		<input ng-model="search" class="form-control" ng-change="updateVpns()" placeholder="type to filter">
 	</div>
 	<table>
 		<tr ng-repeat="vpn in vpns" class="well-sm">
-			<td>
-				OpenVPN
-			</td>
 			<td style="padding-right: 10px">
-				&nbsp;
-			</td>
-			<td style="padding-right: 10px">
-				<label><a href="#{{vpn.id}}">{{vpn.name}}</a></label>
+				<label><a href="autonubil/api/ovpn/vpns/{{vpn.id}}/client_config">{{vpn.name}}</a></label>
 				{{vpn.description}}
 			</td>
 		</tr>
