--- a/an-identity-ovpn/an-identity-ovpn-ui/src/main/js/templates/vpns.html
+++ b/an-identity-ovpn/an-identity-ovpn-ui/src/main/js/templates/vpns.html
@@ -16,18 +16,18 @@
 	</div>
 </div>
 <div class="row">
-	<div class="col-md-12" ng-if="!sources || sources.length == 0">
+	<div class="col-md-12" ng-if="!vpns || vpns.length == 0">
 		<div class="alert alert-warning">
-			<i>No OpenVPN sources found</i>
+			<i>No OpenVPN configurations found</i>
 		</div>
 	</div>
 	<div class="col-md-12">
 		<table class="table table-compact table-striped">
-			<tr ng-repeat="source in sources">
-				<td>{{source.name}}</td>
-				<td>{{source.description}}</td>
-				<td width="20"><a href="#/main/admin/ovpn/sources/{{ovpn.id}}" class="btn btn-primary"><i class="glyphicon glyphicon-pencil"> </i></a>
-				<td width="20"><a href="#/main/admin/ovpn/sources" ng-click="remove(source.id)" class="btn btn-danger"><i class="glyphicon glyphicon-remove-circle"> </i></a>
+			<tr ng-repeat="vpn in vpns">
+				<td>{{vpn.name}}</td>
+				<td>{{vpn.description}}</td>
+				<td width="20"><a href="#/main/admin/ovpn/vpns/{{vpn.id}}" class="btn btn-primary"><i class="glyphicon glyphicon-pencil"> </i></a>
+				<td width="20"><a href="#/main/admin/ovpn/vpns" ng-click="remove(vpn.id)" class="btn btn-danger"><i class="glyphicon glyphicon-remove-circle"> </i></a>
 			</tr>
 		</table>
 	</div>
