--- a/an-identity-me/an-identity-me-ui/src/main/js/templates/my_apps.html
+++ b/an-identity-me/an-identity-me-ui/src/main/js/templates/my_apps.html
@@ -7,15 +7,15 @@
 	</div>
 	</div>
 	<table>
-		<tr ng-repeat="app in apps" class="well-sm" style="margin-bottom:0.2em;">
+		<tr ng-repeat="app in apps" class="well-sm" style="height: 4em;"  valign="top">
 			<td>
-				<img src="/autonubil/api/apps/apps/{{app.id}}/icon" style="max-height: 3em; min-height: 3em"/>
+				<a target="{{app.id}}" href="{{app.url}}"><img src="/autonubil/api/apps/apps/{{app.id}}/icon" style="max-height: 3.2em; min-height: 3.2em"/></a>
 			</td>
 			<td style="padding-right: 10px">
 				&nbsp;
 			</td>
 			<td style="padding-right: 10px">
-				<label><a href="{{app.url}}">{{app.name}}</a></label><br/>
+				<label><a target="{{app.id}}" href="{{app.url}}">{{app.name}}</a></label><br/>
 				{{app.description}}
 			</td>
 		</tr>
