--- a/an-identity-me/an-identity-me-ui/src/main/js/templates/my_apps.html
+++ b/an-identity-me/an-identity-me-ui/src/main/js/templates/my_apps.html
@@ -1,24 +1,24 @@
 <div class="col-md-12" ng-controller="MyAppsController">
-   <div ng-if="apps && apps.length > 0">
-	<h4>Applications</h4>
-	<div ng-if="apps && apps.length > 5">
-	<div class="form-group">
-		<input ng-model="search" class="form-control" ng-change="updateApps()" placeholder="type to filter">
-	</div>
-	</div>
-	<table>
-		<tr ng-repeat="app in apps" class="well-sm" style="height: 4em;"  valign="top">
-			<td>
-				<a target="{{app.id}}" href="{{app.url}}"><img src="/autonubil/api/apps/apps/{{app.id}}/icon" style="max-height: 3.2em; min-height: 3.2em"/></a>
-			</td>
-			<td style="padding-right: 10px">
-				&nbsp;
-			</td>
-			<td style="padding-right: 10px">
-				<label><a target="{{app.id}}" href="{{app.url}}">{{app.name}}</a></label><br/>
-				{{app.description}}
-			</td>
-		</tr>
-	</table>
+	<div ng-if="apps && apps.length > 0">
+		<h4>Applications</h4>
+		<div ng-if="apps && apps.length > 5">
+			<div class="form-group">
+				<input ng-model="search" class="form-control"
+					ng-change="updateApps()" placeholder="type to filter">
+			</div>
+		</div>
+		<ul class="list-group">
+			<li class="row list-group-item" ng-repeat="app in apps">
+				<div class="col-md-1">
+					<a target="{{app.id}}" href="{{app.url}}"><img
+						src="/autonubil/api/apps/apps/{{app.id}}/icon"
+						style="max-height: 3.2em; min-height: 3.2em" /></a>
+				</div>
+				<div class="col-md-11">
+					<label><a target="{{app.id}}" href="{{app.url}}">{{app.name}}</a></label><br />
+					{{app.description}}
+				</div>
+			</li>
+		</ul>
 	</div>
 </div>
