--- a/an-identity-auth/an-identity-auth-ui/src/main/js/templates/login2.html
+++ b/an-identity-auth/an-identity-auth-ui/src/main/js/templates/login2.html
@@ -155,14 +155,16 @@
 		</div>
 	</div>
 </div>
-<div class="row"  ng-if="status.loggedIn">
+<div class="row">
 	<div class="col-md-12 page-header">
 		<h2>Welcome</h2>
 	</div>
 	<div class="col-md-12" include-components path="/dashboard">
-		<div class="row" ng-include="item.templateUrl">
+		{{item}}
+		<div>
+			{{item.title}} <br>
+			<span ng-include="item.templateUrl">
+			</span>
 		</div>
 	</div>
 </div>
-	
-
