--- a/an-identity-ovpn/an-identity-ovpn-ui/src/main/js/templates/vpn.html
+++ b/an-identity-ovpn/an-identity-ovpn-ui/src/main/js/templates/vpn.html
@@ -57,23 +57,23 @@
 					<h4>Server Configuration Provider</h4>
 				</div>
 				<div class="col-md-12"
-					ng-if="!serverConfigProviders || serverConfigProviders.length==0">
+					ng-if="!sessionConfigProviders || sessionConfigProviders.length==0">
 					<div class="alert alert-warning">
 						<i>No Server Config Providers found</i>
 					</div>
 				</div>
 				<div class="col-md-12"
-					ng-if="serverConfigProviders && serverConfigProviders.length > 0">
+					ng-if="sessionConfigProviders && sessionConfigProviders.length > 0">
 					
 					<select class="form-control"
-					    ng-change="save()" data-ng-model="source.serverConfigurationProvider">
-					    <option ng-repeat="serverConfigProvider in serverConfigProviders" value="{{serverConfigProvider.id}}">{{serverConfigProvider.displayName}}</option>
+					    ng-change="save()" data-ng-model="source.sessionConfigurationProvider">
+					    <option ng-repeat="sessionConfigProvider in sessionConfigProviders" value="{{sessionConfigProvider.id}}">{{sessionConfigProvider.displayName}}</option>
 					</select>
 				</div>
 				<div class="col-md-12">
 					<div class="form form-group">
 						<label>Server Configuration (JSON)</label>
-						<textarea json-text ng-model="source.serverConfiguration"
+						<textarea json-text ng-model="source.sessionConfiguration"
 							ng-change="startChange()" class="form-control"
 							style="width: 100%; height: 300px;"></textarea>
 
