--- a/an-identity-me/an-identity-me-ui/src/main/js/templates/my_apps.html
+++ b/an-identity-me/an-identity-me-ui/src/main/js/templates/my_apps.html
@@ -1,27 +1,25 @@
 <div class="col-md-12" ng-controller="MyAppsController">
 	<h4>Applications</h4>
-	<div ng-if="!apps || apps.length == 0">
-		<i>No applications configured for you!</i>
-	</div>
-	<div ng-if="apps && apps.length > 0">
-		<div ng-if="apps && apps.length > 5">
-			<div class="form-group">
-				<input ng-model="search" class="form-control"
-					ng-change="updateApps()" placeholder="type to filter">
-			</div>
+	<div ng-if="apps">
+		<div class="form-group">
+			<input ng-model="search.term" class="form-control" ng-change="updateApps()" placeholder="type to filter">
 		</div>
-		<ul class="list-group">
-			<li class="row list-group-item" ng-repeat="app in apps">
-				<div class="col-md-1">
+		<div ng-if="!apps || apps.length == 0">
+			<i>No matching applications configured for you!</i>
+		</div>
+		<table class="table table-striped table-compact">
+			
+			<tr ng-repeat="app in apps">
+				<td>
 					<a target="{{app.id}}" href="{{app.url}}"><img
 						src="/autonubil/api/apps/apps/{{app.id}}/icon"
 						style="max-height: 3.2em; min-height: 3.2em" /></a>
-				</div>
-				<div class="col-md-11">
+				</td>
+				<td>
 					<label><a target="{{app.id}}" href="{{app.url}}">{{app.name}}</a></label><br />
 					{{app.description}}
-				</div>
-			</li>
-		</ul>
+				</td>
+			</tr>
+		</table>
 	</div>
 </div>
