make notifications work again

--- a/an-identity-auth/an-identity-auth-ui/src/main/js/templates/notifications.html
+++ b/an-identity-auth/an-identity-auth-ui/src/main/js/templates/notifications.html
@@ -1,10 +1,10 @@
 <div class="col-md-12" ng-controller="NotificationController">
 	<h4>Notifications</h4>
-	<div ng-if="!status.identity.user.notifications || status.identity.user.notifications.length == 0">
+	<div ng-if="!status.user.notifications || status.user.notifications.length == 0">
 		<i>No notifications!</i>
 	</div>
-	<div ng-if="status.identity.user.notifications && status.identity.user.notifications.length > 0">
-		<div ng-repeat="notification in status.identity.user.notifications"
+	<div ng-if="status.user.notifications && status.user.notifications.length > 0">
+		<div ng-repeat="notification in status.user.notifications"
 			ng-class="['alert',{'alert-danger':notification.level=='ERROR'},{'alert-warning':notification.level=='WARN'},{'alert-info':notification.level=='INFO'}]">
 			{{notification.message}}</div>
 	</div>
