reworked UI to use tabs

--- a/an-identity-auth/an-identity-auth-ui/src/main/js/templates/notifications.html
+++ b/an-identity-auth/an-identity-auth-ui/src/main/js/templates/notifications.html
@@ -1,5 +1,4 @@
-<div class="col-md-12" ng-controller="NotificationController">
-	<h4>Notifications</h4>
+<div ng-controller="NotificationController">
 	<div ng-if="!status.user.notifications || status.user.notifications.length == 0">
 		<i>No notifications!</i>
 	</div>
