--- a/an-identity-me/an-identity-me-ui/src/main/js/templates/my_info.html
+++ b/an-identity-me/an-identity-me-ui/src/main/js/templates/my_info.html
@@ -1,5 +1,4 @@
-<div class="col-md-12" ng-controller="MyInfoController" >
-	<h4>Accounts</h4>
+<div ng-controller="MyInfoController" >
 	<div ng-repeat="user in identity.linked">
 		<div class="well well-sm"> 
 			<span class="pull-right" ng-click="collpase[user.id] = !collpase[user.id]"><i class="glyphicon glyphicon-chevron-down"> </i></span>
