--- a/an-identity-ldapotp/an-identity-ldapotp-ui/src/main/js/templates/otps.html
+++ b/an-identity-ldapotp/an-identity-ldapotp-ui/src/main/js/templates/otps.html
@@ -1,7 +1,4 @@
-<div class="col-md-12" ng-controller="MyOtpController">
-	<div>
-		<h4>OTP Tokens  </h4>
-	</div>
+<div ng-controller="MyOtpController">
 	<div ng-if="!supported">
 		<span><i>TOTP not supported for this account</i></span>
 	</div>
