--- a/an-identity-ovpn/an-identity-ovpn-ui/src/main/js/templates/my_vpns.html
+++ b/an-identity-ovpn/an-identity-ovpn-ui/src/main/js/templates/my_vpns.html
@@ -1,23 +1,24 @@
-<div class="col-md-12" ng-controller="MyOvpnsController">
-	<h4>VPNs</h4>
+<div ng-controller="MyOvpnsController">
 	<div ng-if="!vpns || vpns.length == 0">
 		<i>No VPNs available!</i>
 	</div>
 	<div ng-if="vpns && vpns.length > 0">
-		<div class="col-md-12" ng-if="vpns && vpns.length > 5">
+		<div ng-if="vpns && vpns.length > 5">
 			<div class="form-group">
 				<input ng-model="search" class="form-control"
 					ng-change="updateVpns()" placeholder="type to filter">
 			</div>
 		</div>
-		<ul class="list-group">
-			<li class="row list-group-item" ng-repeat="vpn in vpns">
-				<div class="col-md-1">
-					<img src="/ovpn/img/openvpn.png"
-						style="max-height: 3.2em; min-height: 3.2em" /><br />
-					
-				</div>
-				<div class="col-md-11">
+		
+		
+		<table class="table table-striped table-compact">
+			<tr ng-repeat="vpn in vpns">
+				<td width="3.5em"  valign="center">
+					<img
+						src="/ovpn/img/openvpn.png"
+						style="max-height: 3.2em; min-height: 3.2em" />
+				</td>
+				<td>
 					<label role="button" ng-click="downloadVpn(vpn.id, vpn.name)">{{vpn.name}}</label>
 					<br /> {{vpn.description}}<br />
 					
@@ -50,9 +51,11 @@
 						<button title="Delete" ng-click="revokeVpnCertificate(vpn.id, vpn.name)"
 							class="btn btn-warning btn-xs glyphicon glyphicon-remove"></button>
 					</div>
-				</div>
-			</li>
-		</ul>  
+				</td>
+			</tr>
+		</table>
+		
+		 
 
 
 		<h5>OpenVPN Clients</h5>
